@@ -7,7 +7,7 @@
 # Copyright (c) 2008 Donal K. Fellows
 # All rights reserved.
 #
-# RCS: @(#) $Id: canvas.test,v 1.27 2008/11/28 00:10:25 ferrieux Exp $
+# RCS: @(#) $Id: canvas.test,v 1.28 2008/12/12 00:09:38 nijtmans Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -139,7 +139,7 @@ test canvas-1.33 {configuration options: good value for "relief"} -body {
 } -result {groove}
 test canvas-1.34 {configuration options: bad value for "relief"} -body {
     .c configure -relief 1.5
-} -returnCodes error -result {bad relief type "1.5": must be flat, groove, raised, ridge, solid, or sunken}
+} -returnCodes error -result {bad relief "1.5": must be flat, groove, raised, ridge, solid, or sunken}
 test canvas-1.35 {configuration options: good value for "selectbackground"} -body {
     .c configure -selectbackground #110022
     .c cget -selectbackground
